# mph_scalar_hackathon

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  dqn_easy.pt  dqn_hard.pt  dqn_medium.pt  err.txt  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  simulation.py  test_debug_gemini.py  test_direct.py  test_env.py  test_heuristic.py  test_http.py  test_local_llm.py  train_rl_agent.py  verify_local.py
server/: __init__.py  app.py  baseline.py  sdsmp_environment.py
